# Do

./: .gitignore  CMakeLists.txt  Makefile  README.md  log.txt  run.bat  run.sh
include/: filehandler.hpp  task.hpp  ui.hpp
include/graphics/: general.h
include/graphics/objects/: button.h  checkbox.h  do.h  text.h
include/objects/: checkbox.h  general.h  text.h
src/: checkbox.c  filehandler.cpp  general.c  main.c  main.cpp  task.cpp  text.c
src/graphics/: createDoGraphical.c  general.c
src/graphics/objects/: button.c  checkbox.c  do.c  text.c
src/ui/: createTask.cpp
